<resources>
    <string name="app_name">Safepal</string>
    <string name="action_settings">Settings</string>
    <string name="overall_exit">Exit App</string>
    <string name="overall_fab_back">Back</string>
    <string name="overall_fab_next">Next</string>
    <string name="overall_fab_submit">Submit</string>
    <string name="not_your_fault_alert_header">It is not your fault</string>
    <string name="seek_medical_alert_head">Seek medical Care</string>
    <string name="signs_of_sgbv_header">Beware.. </string>
    <string name="action_home_disclaimer">Disclaimer</string>
    <string name="action_home_guide">Guide</string>
    <string name="home_fab_report">Report Sexual Violence</string>
    <string name="home_activity_title">SafePal</string>
    <string name="wsgh_activity_title"> Getting Help</string>
    <string name="wsgh_msgs_to_ecourage_survivor"> Messages to encourage the survivor or friend to report an incident - Programme team</string>
    <string name="wsgh_happened_to_who">Did the incident happen to you?</string>
    <string name="wsgh_yes">Yes, it was me.</string>
    <string name="wsgh_someone_else">No, to somebody I know</string>
    <string name="settings_permission_message">Safepal needs permission to use this feature. You can grant them in app settings.</string>
    <string name="needs_permission">Need Permissions</string>
    <string name="sif_activity_title">Getting Help </string>
    <string name="sif_survivor_age">When were you born ?</string>
    <string name="sif_survivor_pick_age">choose a date </string>
    <string name="sif_survivor_gender">Are you female or male ?</string>
    <string name="sif_survivor_gender_above_18">Are you a Man or Woman?</string>
    <string name="sif_incident_location">Where did it happen?</string>
    <string name="sif_incident_details">Tell the story of the incident.</string>
    <string name="sif_male">Boy </string>
    <string name="sif_female">Girl </string>
    <string name="apif_activity_title">Getting Help </string>
    <string name="survivor_age">How old is she/he? </string>
    <string name="apif_survivor_gender">Is this person female or male?</string>
    <string name="apif_survivor_gender_above_18">Is she/he a Man or Woman?</string>
    <string name="incident_location">Where did it happen?</string>
    <string name="incident_details">Tell the story of the incident.</string>
    <string name="apif_male">Boy </string>
    <string name="apif_female">Girl </string>
    <string name="title_activity_main_activitysdas">MainActivitysdas</string>
    <string name="title_activity_referral">Contact Info…</string>
    <string name="after_submit_msg">Thank you for submitting the Incident. The incident was successfully delivered to SafePal. \nSafePal will in a short while provide you with a person to assist you.</string>
    <string name="title_activity_eferral2">Nearest CSO</string>
    <string name="refferal_two_intro">We have located the nearest ... (CSO) to you.\nThe people at this CSO have already gotten information about this incident and they will be contacting you soon.\nBelow are the details of this CSO.</string>
    <string name="close_dialog">Close</string>
    <string name="em_not_fault">It\'s not your fault</string>
    <string name="title_activity_contact">Nearest Help</string>
    <string name="title_activity_chat">Chat</string>
    <string name="contact_u_or_not">Would you like to contact you?</string>
    <string name="contact_yes">Yes</string>
    <string name="contact_no">No</string>
    <string name="direction_api_key">AIzaSyCs4MLCwOm37kZn2kB1M2YQwSVSQv-oJ74</string>
    <string name="title_activity_cso">Help</string>
    <string name="reset_button">Reset</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="report_sexual_abuse">Report Sexual Abuse</string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="title_activity_reporting">Report</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cannotLeaveBlank">Please kindly fill this field.</string>
    <string name="enter_correct_number">Please enter a correct phone number</string>
    <string name="next_message">next</string>
    <string name="intro_encouraging_messages">Get familiar with important information by viewing the quick help information below. Swipe left or right to show other information</string>
    <string name="home">Home</string>
    <string name="auto_scroll_messages">Auto scroll</string>
    <string name="shared_pref_name">safepal_prefs</string>
    <string name="first_time">first_time_to_run_app</string>
    <string name="cso_no_internet_text">No internet connection. Make sure Wi-Fi or cellular data is turned on, then try again </string>
    <string name="cso_no_internet_retry">Retry</string>
    <string name="home_guide_fab_report_title">Report an incident </string>
    <string name="home_guide_fab_report_text">Click on the right bottom button to report a sexual violence incident directly to safepal
    and get linked to the nearest service provider for help. </string>
    <string name="home_guide_fab_exit_title">Quick Exit </string>
    <string name="home_guide_fab_exit_text"> If you are suspicious that perpetrator knows you are reporting him/her, use the left bottom \'Exit\' button to exit the safepal app or quickly uninstall it by long pressing on the \'Exit\' button.</string>
    <string name="home_guide_fab_next_title">Important Information </string>
    <string name="home_guide_fab_next_text"> \"Learning never ends\" - the saying goes, swipe left or right to get more information about sexual violence. Together, we can fight gender based violence </string>
    <string name="report">REPORT</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apif_disability">Does the victim have any disability</string>
    <string name="enter_disability">What disability do you have</string>
    <string name="reachout_message">Talk to us if you or someone you know has been sexually assaulted</string>
    <string name="reachout_title">We are here for you . .</string>
    <string name="title_activity_discover_more">Videos</string>
    <string name="videos_tab">Videos</string>
    <string name="topics_tab">Topics</string>
    <string name="directory_tab">Directory</string>
    <string name="title_activity_watch_video">Video</string>
    <string name="title_activity_read_article">Article</string>
    <string name="spaces">\n</string>
    <string name="chat_with_us">Chat with us</string>
    <string name="faq_title">FAQ</string>
</resources>