<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".report.WhoSGettingHelpActivity">
    <item
        android:id="@+id/menu_guide"
        android:orderInCategory="2"
        android:title="@string/action_home_guide"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_chat"
        android:icon="@drawable/ic_message_24px"
        android:orderInCategory="1"
        android:title="@string/chat_with_us"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_faq"
        android:icon="@drawable/ic_help_circle_outline"
        android:orderInCategory="2"
        android:title="@string/faq_title"
        app:showAsAction="always" />

</menu>
