<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.unfpa.safepal.SurvivorIncidentFormActivity"
    tools:showIn="@layout/activity_survivor_incident_form">

    <TextView
        android:id="@+id/sif_ecouraging_messages_tv"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wsgh_msgs_to_ecourage_survivor"/>
    <View
        android:id="@+id/sif_horizotal_line"
        android:layout_below="@+id/sif_ecouraging_messages_tv"
        android:layout_width="match_parent"
        android:layout_height= "2dp"
        android:background="@color/colorGrey" />
    <LinearLayout
        android:id="@+id/sif_age_linear_layout"
        android:layout_below="@+id/sif_horizotal_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/sif_age_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/sif_survivor_age"/>
     <EditText
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1">

     </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sif_gender_linear_layout"
        android:layout_below="@+id/sif_age_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/sif_gender_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/sif_survivor_gender"/>
        <RadioGroup
            android:id="@+id/sif_gender_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/sif_gender_girl_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sif_female"/>
            <RadioButton
                android:id="@+id/sif_gender_boy_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sif_male"/>
        </RadioGroup>

    </LinearLayout>
    <Spinner
        android:id="@+id/sif_incident_type_spinner"
        android:layout_below="@+id/sif_gender_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>
    <EditText
        android:id="@+id/sif_incident_location_et"
        android:layout_below="@+id/sif_incident_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sif_incident_location"/>
    <EditText
        android:id="@+id/sif_incident_details_rt"
        android:layout_below="@+id/sif_incident_location_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sif_incident_details"/>

</RelativeLayout>
