<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/ecouraging_messages_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:maxLines="3"
            android:onClick="onClickEncouragingMessages"
            android:text="@string/wsgh_msgs_to_ecourage_survivor" />

        <!--<include layout="@layout/divider" />-->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="20dp"
            android:id="@+id/image_spinner_what_happed"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/ic_action_help" />

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:id="@+id/wsgh_spinner_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_bg"
            android:layout_toEndOf="@id/image_spinner_what_happed"
            android:layout_toRightOf="@id/image_spinner_what_happed">
            <Spinner
                android:id="@+id/incident_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:spinnerMode="dropdown"
                style="@style/coolSpinnerNormal"

                />
            </RelativeLayout>

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_where_take_place"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@+id/inpu_latout_where"
                    android:layout_alignTop="@+id/inpu_latout_where"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_action_place" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inpu_latout_where"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/image_where_take_place"
                    android:layout_toRightOf="@id/image_where_take_place"
                    >

                    <EditText
                        android:id="@+id/incident_location_actv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/incident_location"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_story"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@+id/input_latout_story"
                    android:layout_alignTop="@+id/input_latout_story"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_action_view_as_list" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_latout_story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/image_story"
                    android:layout_toRightOf="@id/image_story">

                    <EditText
                        android:id="@+id/sif_incident_details_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/incident_details"
                        android:inputType="text|textMultiLine" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

        </LinearLayout>

        <include layout="@layout/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/image_gender"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/gender"
                android:layout_marginTop="10dp"
                />


            <LinearLayout
                android:id="@+id/gender_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/image_gender"
                android:layout_toRightOf="@id/image_gender"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/subtitle_margin_bottom"
                    android:text="@string/gender"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    />


                <RadioGroup
                    android:id="@+id/sif_gender_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/gender_girl_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/gender_boy_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/male" />
                </RadioGroup>

            </LinearLayout>

        </RelativeLayout>

        <include layout="@layout/divider" />

        <!-- Age Textbox and Button-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/image_age"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/ic_action_go_to_today" />

        <LinearLayout

            android:id="@+id/age_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/image_age"
            android:layout_toRightOf="@id/image_age"

            >

            <TextView
                android:id="@+id/sif_qtn_age_tv"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/survivor_age"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />

            <!--afer choosing aa date, chosem date will appear here-->
            <TextView
                android:id="@+id/sif_chosen_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/date_of_birth_button"
                style="@style/materialButtonNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showDatePickerDialog"
                android:text="@string/sif_survivor_pick_age"

                />


        </LinearLayout>
        </RelativeLayout>

        <include layout="@layout/divider" />

        <!--The footer that conststs of two buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exit_app"
                style="@style/materialButtonAttention"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exitApp" />

            <Button
                android:id="@+id/finish"
                style="@style/materialButtonNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickSubmitIncident"
                android:text="@string/submit" />

        </LinearLayout>
        <!--end of The footer that conststs of two buttons-->

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>