<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_reporting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.unfpa.safepal.report.WhoSGettingHelpFragment"
    android:background="@color/colorWhite"

    >
        <TextView
            android:layout_marginTop="@dimen/intro_text_margin_top"
            android:id="@+id/wsgh_ecouraging_messages_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:layout_gravity="center_vertical|right"
            android:text="@string/wsgh_msgs_to_ecourage_survivor"
            android:textStyle="bold"
            />


        <!--<RelativeLayout-->
        <!--android:id="@+id/container_for_foot"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true">-->

        <!--<include layout="@layout/footer_buttons" />-->
        <!--</RelativeLayout>-->

        <LinearLayout

            android:id="@+id/home_info_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/rect_shadow"
            android:orientation="vertical">


            <!--<RelativeLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center">-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wsgh_happened_to_who"
                android:textSize="@dimen/wsgh_middle_text"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/wsgh_who_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">


                <RadioButton
                    android:id="@+id/wsgh_yes_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/wsgh_yes" />

                <RadioButton
                    android:id="@+id/wsgh_someoneelse_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/wsgh_someone_else" />
            </RadioGroup>

            <RelativeLayout
                android:id="@+id/wsgh_spinner_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_bg"
                android:onClick="onClickWsghIvSpinner"
                android:orientation="horizontal"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/wsgh_relationship_spinner"
                    style="@style/coolSpinnerNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:minWidth="200dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:spinnerMode="dropdown"


                    />
            </RelativeLayout>
        </LinearLayout>
</RelativeLayout>